# notetaking-backend

./: Cargo.toml  README.md  Rocket.toml
frontend/: index.html  script.js
src/: auth.rs  client.rs  clinician.rs  clinicion.rs  endpoints.md  main.rs  modules.rs  notes.rs  utils.rs  validation.rs
src/api/: auth_api.rs  client_api.rs  mod.rs  notes_api.rs  user_api.rs  workplace_api.rs
src/models/: auth_model.rs  client_model.rs  mod.rs  notes_model.rs  user_model.rs  workplace_model.rs
src/repository/: mod.rs  mongodb_repo.rs
tests/: serdes_tests.rs
