[package]
name = "notetaking-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] }
tokio = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pbkdf2 = "0.11.0"
rand_core = "0.6.3"
rocket_db_pools = { version = "0.1.0-rc.2", features = ["mongodb"] }
rocket = "0.4.11"
